@@ -732,11 +732,10 @@ void PrintVLC(std::vector<TChannel>& List) {
         title += ". Channel";
      ss << INDENT << "<title>" << title << "</title>" << std::endl;
 
-     uint32_t freq_Hz, freq_MHz;
+     uint32_t freq_Hz;
 
      freq_Hz = c.Frequency;
      while(freq_Hz && (freq_Hz < 1000000)) freq_Hz *= 1000;
-     freq_MHz = freq_Hz / (1000 * 1000);
 
      if (c.Source == "A") {
         ss << INDENT << "<location>atsc://frequency=" << freq_Hz << "</location>" << std::endl;
@@ -855,9 +854,10 @@ void PrintVLC(std::vector<TChannel>& List) {
         ss << INDENT << "</extension>" << std::endl;
         }
      if (c.Source.find('S') == 0) {
+        uint32_t freq_MHz = c.Frequency;
         ss << INDENT << "<location>dvb-s";
         if (c.DelSys == 1) ss << "2";
-        ss << "://frequency=" << freq_MHz * 1000 << "</location>" << std::endl;
+        ss << "://frequency=" << freq_MHz << "</location>" << std::endl;
 
         ss << INDENT << "<extension" << " application=" << '"' << AppUrl << '"' << ">" << std::endl;
         indent++;
